# fast-api

./: .gitignore  app.py  pyproject.toml  readme.md  test_app.py
