[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Rawlsy-py <christopher_m_mitchell@live.co.uk>"]
readme = "README.md"
packages = [{ include = "fast_api" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
polars = "^0.20.5"
pokebase = "^1.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"
black = "^23.12.1"
pytest-mock = "^3.12.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
